syntax = "proto3";

package book;

service BookService {
  rpc GetBooks (EmptyRequest) returns (BookListResponse) {};
  rpc GetBookById (GetBookByIdRequest) returns (BookResponse);

  rpc GetAuthors (Empty) returns (AuthorListResponse);
  rpc GetAuthorById (GetAuthorByIdRequest) returns (AuthorResponse);

  rpc GetChaptersByBookId (GetChaptersByBookIdRequest) returns (ChapterListResponse);
  rpc GetChapterById (GetChapterByIdRequest) returns (ChapterResponse);

  rpc GetCommentsByChapterId (GetCommentsByChapterIdRequest) returns (CommentListResponse);
  rpc CreateComment (CreateCommentRequest) returns (CommentResponse);
}

message GetCommentsByChapterIdRequest {
  string chapter_id = 1;
}

message CreateCommentRequest {
  string chapter_id = 1;
  string user_id = 2;
  string comment = 3;
}

message Comment {
  string id = 1;
  string user_id = 2;
  string chapter_id = 3;
  string comment = 4;
  string created_at = 5;
  repeated Comment replies = 6;
}

message CommentResponse {
  Comment comment = 1;
}

message CommentListResponse {
  repeated Comment comments = 1;
}

message GetChaptersByBookIdRequest {
  string book_id = 1;
}

message GetChapterByIdRequest {
  string id = 1;
}

message Chapter {
  string id = 1;
  string name = 2;
  string book_id = 3;
  string text_file = 4;
  string audio_file = 5;
}

message ChapterResponse {
  Chapter chapter = 1;
}

message ChapterListResponse {
  repeated Chapter chapters = 1;
}

message GetAuthorByIdRequest {
  string id = 1;
}

message AuthorResponse {
  Author author = 1;
}

message AuthorListResponse {
  repeated Author authors = 1;
}

message Author {
  string id = 1;
  string user_id = 2;
  string pen_name = 3;
  string name = 4;
  string description = 5;
}

message GetBookByIdRequest {
  string id = 1;
}

message BookResponse {
  Book book = 1;
}

message EmptyRequest {}
message Empty {}

message Book {
  string id = 1;
  string title = 2;
  string description = 3;
  string author_id = 4;
  repeated string genres = 5;
  string publish_year = 6;
  string cover_img = 7;
}

message BookListResponse {
  repeated Book books = 1;
}
