syntax = "proto3";

package book;

service BookService {
  rpc CreateAuthor(CreateAuthorRequest) returns (Author);
  rpc GetAllAuthors(Empty) returns (GetAllAuthorsResponse);
  rpc GetAuthorById(GetAuthorByIdRequest) returns (Author);

  rpc CreateGenre(CreateGenreRequest) returns (Genre);
  rpc GetAllGenres(Empty) returns (GetAllGenresResponse);
  rpc GetGenreById(GetGenreByIdRequest) returns (Genre);

  rpc CreateBook(CreateBookRequest) returns (Book);
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (Book);
  rpc GetBooksByMonthly(Empty) returns (GetBooksResponse);
  rpc GetBooksByViews(Empty) returns (GetBooksResponse);
  rpc GetBooksByCreatedTime(Empty) returns (GetBooksResponse);
  rpc GetBooksByUpdatedTime(Empty) returns (GetBooksResponse);
  
  rpc CreateBookWithCover(CreateBookWithCoverRequest) returns (Book);
  rpc UpdateBook(UpdateBookRequest) returns (Book);

  rpc CreateChapter(CreateChapterRequest) returns (Chapter);
  rpc GetChaptersByBookId(GetChaptersByBookIdRequest) returns (GetChaptersResponse);
  rpc GetChapterById(GetChapterByIdRequest) returns (Chapter);
  rpc UpdateChapter(UpdateChapterRequest) returns (Chapter);
  rpc UpdateChapter2(UpdateChapter2Request) returns (Chapter);
  
  rpc CreateComment(CreateCommentRequest) returns (Comment);
  rpc GetCommentsByChapterId(GetCommentsByChapterIdRequest) returns (GetCommentsResponse);
  rpc CreateRating(CreateRatingRequest) returns (Rating);
  rpc GetRatingsByBookId(GetRatingsByBookIdRequest) returns (GetRatingsResponse);

  rpc CreateLibrary(CreateLibraryRequest) returns (Library);
  rpc GetLibrariesByUserId(GetLibrariesByUserIdRequest) returns (GetLibrariesResponse);
  rpc UpdateLibrary(UpdateLibraryRequest) returns (Library);
  rpc DeleteLibrary(DeleteLibraryRequest) returns (Empty);
  rpc GetLibraryById(GetLibraryByIdRequest) returns (Library);

  rpc CreateHistory(CreateHistoryRequest) returns (History);
  rpc GetAllHistories(Empty) returns (GetHistoriesResponse);
  rpc GetHistoriesByUserId(GetHistoriesByUserIdRequest) returns (GetHistoriesResponse);
  rpc GetHistoriesByBookId(GetHistoriesByBookIdRequest) returns (GetHistoriesResponse);
  rpc GetMostUsedVoiceFromHistories(GetMostUsedVoiceRequest) returns (MostUsedVoiceResponse);
  rpc GetLastUsedVoiceFromHistories(GetLastUsedVoiceRequest) returns (LastUsedVoiceResponse);

  rpc CountBooks(Empty) returns (CountBooksResponse);
  rpc CountBooksThisMonth(Empty) returns (CountBooksResponse);
  rpc GetTotalBooksInTwelveMonths(Empty) returns (MonthlyBooksResponse);
  rpc GetHistoriesBooksByUserId(GetHistoriesBooksByUserIdRequest) returns (GetHistoriesBooksByUserIdResponse);
}
message DeleteLibraryRequest {
  string id = 1;
}

message GetLibraryByIdRequest {
  string id = 1;
}

message UpdateLibraryRequest {
  string id = 1;
  string name = 2;
  repeated string books = 3;
}

message AddBookToLibraryRequest {
  string library_id = 1;
  string book_id = 2;
}

message RemoveBookFromLibraryRequest {
  string library_id = 1;
  string book_id = 2;
}

message UpdateLibraryNameRequest {
  string library_id = 1;
  string name = 2;
}

message GetBooksResponse {
  repeated Book books = 1;
}

message GetHistoriesBooksByUserIdRequest {
  string user_id = 1;
}

message GetHistoriesBooksByUserIdResponse {
  repeated Book books = 1;
}

message MonthlyBooksResponse {
  repeated MonthlyTotal monthly_totals = 1;
}

message MonthlyTotal {
  string month = 1;
  int32 total = 2;
}

message CountBooksResponse {
  int32 count = 1;
}

message GetLastUsedVoiceRequest {
  string user_id = 1;
}

message LastUsedVoiceResponse {
  string voice_id = 1;
  string created_at = 2;
}

message GetMostUsedVoiceRequest {
  string book_id = 1;
}

message MostUsedVoiceResponse {
  string voice_id = 1;
  int32 use_count = 2;
}

message GetHistoriesByBookIdRequest {
  string book_id = 1;
}

message CreateHistoryRequest {
  string user = 1;
  string chapter = 2;
  string voice = 3;
}

message GetHistoriesByUserIdRequest {
  string user_id = 1;
}

message GetHistoriesResponse {
  repeated History histories = 1;
}

message History {
  string id = 1;
  string user = 2;
  Chapter chapter = 3;
  string voice = 4;
  string created_at = 5;
}

message GetLibrariesByUserIdRequest {
  string user_id = 1;
}

message GetLibrariesResponse {
  repeated Library libraries = 1;
}

message CreateLibraryRequest {
  string user = 1;
  string name = 2;
  // repeated string books = 3;
}

message Library {
  string id = 1;
  string user = 2;
  string name = 3;
  repeated Book books = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetRatingsByBookIdRequest {
  string book_id = 1;
}

message GetRatingsResponse {
  repeated Rating ratings = 1;
}

message CreateRatingRequest {
  string user = 1;
  string book = 2;
  int32 star = 3;
  string review = 4;
}

message Rating {
  string id = 1;
  string user = 2;
  string book = 3;
  int32 star = 4;
  string review = 5;
  string created_at = 6;
  string updated_at = 7;
}

message GetCommentsByChapterIdRequest {
  string chapter_id = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}

message CreateCommentRequest {
  string content = 1;
  string user = 2;
  string chapter = 3;
}

message UpdateChapter2Request {
  string id = 1;
  repeated AudioFile audio_files = 2;
}

message AudioFile {
  string voice_id = 1;
  string audio_url = 2;
}

message UpdateChapterRequest {
  string id = 1;
  int32 chapter_number = 2;
  string name = 3;
  string book = 4;
  TextFile text_file = 5;
}

message TextFile {
  string file_name = 1;
  string file_content = 2;
  string file_type = 3;
}

message GetChaptersByBookIdRequest {
  string book_id = 1;
}

message GetChaptersResponse {
  repeated Chapter chapters = 1;
}

message GetChapterByIdRequest {
  string id = 1;
}

message CreateChapterRequest {
  int32 chapter_number = 1;
  string name = 2;
  string book = 3;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  repeated string genres = 4;
  string description = 5;
  int32 publish_year = 6;
  string status = 7;
  CoverImage new_cover_image = 8;
}

message CreateBookWithCoverRequest {
  string title = 1;
  string author = 2;
  repeated string genres = 3;
  string description = 4;
  int32 publish_year = 5;
  string status = 6;
  CoverImage cover_image = 7;
}

message CoverImage {
  string file_name = 1;
  string file_content = 2;
  string file_type = 3;
}

message GetAllBooksRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
  string status = 4;
  repeated string genres = 5; 
  string search = 6;
  string author = 7;
  int32 publish_year = 8;  
  string rating_filter = 9;   
}

message GetAllBooksResponse {
  repeated Book books = 1;
  int32 total = 2;
  int32 page = 3;
  int32 pages = 4;
}

message GetBookByIdRequest {
  string id = 1;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  repeated string genres = 3;
  string description = 4;
  int32 publish_year = 5;
  string cover_img = 6;
  string status = 7;
}

message Book {
  string id = 1;
  string title = 2;
  Author author = 3;
  repeated Genre genres = 4;
  string description = 5;
  int32 publish_year = 6;
  MediaFile cover_img = 7;
  repeated Chapter chapters = 8;
  float avg_rating = 9;
  int32 views = 10;
  int32 followers = 11;
  int32 monthly_views = 12;
  string status = 13;
  string created_at = 14;
  string updated_at = 15;
}

message Chapter {
  string id = 1;
  int32 chapter_number = 2;
  string name = 3;
  string book = 4;
  MediaFile text_file = 5;
  repeated MediaFile audio_file = 6;
  repeated Comment comments = 7;
}

message Comment {
  string id = 1;
  string content = 2;
  string user = 3;
  string created_at = 4;
  string updated_at = 5;
}

message MediaFile {
  string id = 1;
  string voice = 2;
  string file_collection = 3;
  string file_url = 4;
  string file_type = 5;
  int32 file_size = 6;
}

message CreateGenreRequest {
  string name = 1;
  string description = 2;
}

message GetGenreByIdRequest {
  string id = 1;
}

message GetAllGenresResponse {
  repeated Genre genres = 1;
}

message Genre {
  string id = 1;
  string name = 2;
  string description = 3;
}

message Empty {}

message GetAuthorByIdRequest {
  string id = 1;
}

message GetAllAuthorsResponse {
  repeated Author authors = 1;
}

message CreateAuthorRequest {
  string pen_name = 1;
  string name = 2;
  string description = 3;
}

message Author {
  string id = 1;
  string pen_name = 2;
  string name = 3;
  string description = 4;
  repeated string books = 5;
}